--- a/wtstuff.html
+++ b/wtstuff.html
@@ -95,6 +95,9 @@
 					<p>An alloy composed of iron, communism, and bias, used extensively by Russia as armor. Also used by Gaijin to reinforce trees, to ensure your airplane will explode if you so much as tap one.</p>
 				</div>
 				<div class="content_div">
+					<p>I finally quit this snail forsaken game. 10/10 would recommend literally immediately solves all of your problems and instantly makes you look like Gaston.</p>
+					<img src="/images/dost thou shred-vernum.jpg">
+				<div class="content_div">
 					<img src="/images/slide.jpg">
 				</div>
 			</div>
