--- a/wtstuff.html
+++ b/wtstuff.html
@@ -97,6 +97,7 @@
 				<div class="content_div">
 					<p>I finally quit this snail forsaken game. 10/10 would recommend literally immediately solves all of your problems and instantly makes you look like Gaston.</p>
 					<img src="/images/dost thou shred-vernum.jpg">
+				</div>
 				<div class="content_div">
 					<img src="/images/slide.jpg">
 				</div>
