--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
 				<img src="/images/strv103drift.gif">
 				<p class="align_center">I like the Strv 103 a little bit</p>
 				</div>
+				<div class="content_div">
+				<img src="/images/feanor.png">
+				</div>
 			</div>
 			<div class="part">
 				<div class="content_div">
