--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 				<div class="content_div">
 					<p><a href="/index.html">.</a><br>..<br><a href="/about.html">Personel File</a><br><a href="/wtstuff.html">War Thunder</a><br><a href="/music.html">Music</a><br><a href="/jack.html">Mad Jack Churchill</a><br><a href="/planes.html">Airplanes</a></p>
 				</div>
+				<div class="content_div">
+					<a href="https://eatrawpotatoes.net"><img src="https://eatrawpotatoes.net/images/vigilat.gif"></a>
+				</div>
 			</div>
 			<div class="right">
 				<div class="content_div">
