--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
 					<p><a href="/index.html">.</a><br>..<br><a href="/about.html">Personel File</a><br><a href="/wtstuff.html">War Thunder</a><br><a href="/music.html">Music</a><br><a href="/jack.html">Mad Jack Churchill</a><br><a href="/planes.html">Airplanes</a></p>
 				</div>
 				<div class="content_div">
-					<a href="/index.html"><img src="/images/vigilat.gif" class="button"></a>
+					<a href="/index.html"><img src="/images/vigilat.gif" class="button" class="center"></a>
+					<p>Behold! My button. If you want to link to my site, use the following code:</p>
+					<div class="content_div">
+						<p>&lt;a href="https://eatrawpotatoes.net"&gt;&lt;img src="https://eatrawpotatoes.net/images/vigilat.gif"&gt;&lt;/a&gt;<p>
+					</div>
+					<p>If you link me, I'll link you, send me a message on discord(purplac) if you do!</p>
 				</div>
 			</div>
 			<div class="right">
