--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="wtstuff.html">War Thunder</a><br><a href="/music.html">Music</a><br><a href="/jack.html">Mad Jack Churchill</a><br><a href="/planes.html">Airplanes</a></p>
+					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="#088">Personel File 088</a></p>
 				</div>
 			</div>
 			<div class="right">
@@ -98,7 +98,7 @@
 			</div>
 			<div class="part">
 				<div class="content_div">
-					<h1 class="align_center">Personel File 088</h1>
+					<h1 class="align_center" id="088">Personel File 088</h1>
 					<div class="divide"></div>
 					<ul>
 						<li><p>Name: [DATA EXPUNGED]</p></li>
