--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 						<img src="/images/rome.gif" class="button">
 					</div>
 					<div class="divide"></div>
-					<p class="align_center">Hello random stranger, I don't know how you ended up here, perhaps followed a link or something of the sort. Either way, thansk for stopping by! This site exists for two reasons. 1: I want to learn about websites and the internet, I think the best way to do that is by running a site. 2: Because it's a fun place to post stuff(hopefully)</p>
-					<p class="align_center">If you're trying to access this on a mobile device, that sucks becausee I can't be bothered to figure out all the bullcrap that goes into making it work, so just use a computer with a normal sized screen the way Tim Berners Lee intended, I beg of you!</p>
+					<p class="align_center">Hello random stranger, I don't know how you ended up here, perhaps followed a link or something of the sort. Either way, thanks for stopping by!</p>
+					<p class="align_center">If you're trying to access this on a mobile device, that sucks becausee I can't be bothered to figure out all the bullcrap that goes into making it work, so just use a computer with a normal sized screen the way Tim Berners Lee intended, I beg of thee!</p>
 				</div>
 			</div>
  		</div>
