--- a/music.html
+++ b/music.html
@@ -103,7 +103,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/music.html">.</a><br><a href="/index.html">..</a><br><a href="/about.html">Personel File</a><br><a href="/wtstuff.html">War Thunder</a><br><a href="/jack.html">Mad Jack Churchill</a><br><a href="/planes.html">Airplanes</a></p>
+					<p><a href="/music.html">.</a><br><a href="/index.html">..</a><br><a href="#alan">Alan Aztec is Cool</a></p>
 				</div>
 			</div>
 			<div class="right">
@@ -124,7 +124,7 @@
 					<div class="divide"></div>
 				</div>
 				<div class="content_div">
-					<h1>Go listen to Alan Aztec</h1>
+					<h1 id="alan">Go listen to Alan Aztec</h1>
 					<div class="divide"></div>
 					<p>Alan Aztec is some guy who makes hardbass I guess. My favorite of his songs is Disco Panzer(technically the album cover depicts a modified Stug III, which is not a panzer nor a tank but an assault gun but that  doesn't really matter), but I like a lot of what he makes in general. Oh and Kubelwagen GTI is a good one too. Alan Aztec's music itself is kinda varied, some is about hardbass itself, some is about particular usually European countries such as Germanay, Poland, and Russia. Some stuff he's done recently is related to historical events and figures, he's made a song about Charles de Gaulle, Lauri Torni, and St. Joan of Arc interestingly enough(maybe with luck we'll get something about White Death or Mad Jack). He's also got a song about D-Day focusing on French freedom which is pretty cool.</p>
 					<p>[Insert links to Alan Aztec]</p>
