--- a/planes.html
+++ b/planes.html
@@ -83,7 +83,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/planes.html">.</a><br><a href="/index.html">..</a><br><a href="/about.html">Personel File</a><br><a href="/wtstuff.html">War Thunder</a><br><a href="/music.html">Music</a><br><a href="/jack.html">Mad Jack Churchill</a></p>
+					<p><a href="/planes.html">.</a><br><a href="/index.html">..</a><br><a href="#tomcat">F-14 Tomcat</a></p>
 				</div>
 			</div>
 			<div class="right">
@@ -93,7 +93,7 @@
 			</div>
 			<div class="part">
 				<div class="content_div">
-					<h1 class="align_center">Rating Airplanes By How Gay They Are</h1>
+					<h1 class="align_center" id="tomcat">Rating Airplanes By How Gay They Are</h1>
 					<div class="divide"></div>
 					<p class="align_center"><strong>F-14 Tomcat</strong></p>
 					<img class="center" src="/images/f-14.jpg" style="width:50%">
