--- a/wtstuff.html
+++ b/wtstuff.html
@@ -86,7 +86,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/wtstuff.html">.</a><br><a href="/index.html">..</a><br><a href="/about.html">Personel File</a><br><a href="/music.html">Music</a><br><a href="/jack.html">Mad Jack Churchill</a><br><a href="/planes.html">Airplanes</a></p>
+					<p><a href="/wtstuff.html">.</a><br><a href="/index.html">..</a><br><a href="#torvalds">A Linus Torvalds Reticle</a><br><a href="#42">BT-42</a><br><a href="#problems">There Problems with this game</a></p>
 				</div>
 			</div>
 			<div class="right">
@@ -108,7 +108,7 @@
 					<div class="divide"></div>
 				</div>
 				<div class="content_div">
-					<h1 class="align_center">A Linus Torvalds Reticle</h1>
+					<h1 class="align_center" id="torvalds">A Linus Torvalds Reticle</h1>
 					<div class="divide"></div>
 					<p>So you know, I got tired of the default reticle, so I found a nice image of Linus Torvalds, and decided to make a sight out of it, as  anyone would. The nice image in question is a picture of that one time Linus decided to give the middle finger to Nvidia, a very reasonable thing to do.</p>
 					<p>I painstakingly did all the hard work of making and writing such a sight,  and when it was finished, I was super happy. I had noticed earlier that the WT Live site for user uploaded reticles didn't have anything related to Linus Torvalds, so I uploaded mine. The next day it had been taken down because it was an "obscene gusture" Gaijin mods suck. <br>Anyways, since I can't post it there, I have put it here. I ain't gonna explain how to install a reticle because there's plenty of guides on the internet and I hope you're not stupid.</p>
@@ -117,7 +117,7 @@
 					<img src="/images/linus_sight.png">
 				</div>
 				<div class="content_div">
-					<h1 class="align_center">The BT-42 is really cool</h1>
+					<h1 class="align_center" id="42">The BT-42 is really cool</h1>
 					<div class="divide"></div>
 					<p>The BT-42 was a Finnish tank used in WWII. It was created by taking the hulls of captured Russian BT-7 tanks, ripping the turret off, and putting a new turret with a british QF 4.5 in(114MM) MK II Howitzer in it's place. The resulting tankenstein is very top heavy, has a high profile, so little armor that it basically protects you from nothing, and cannot penetrate anything of it's time period. Pretty much the only benefit of it is that it is pretty fast and is kinda funny looking.</p>
 					<ul style="width:50%">
@@ -138,7 +138,7 @@
 					<p>Note: tank is not the correct term for the BT-42, it's more of a self propelled assault gun, however it's a lot easier to read and write tank than it is to write self propelled assault gun, or self propelled howitzer or whatever you want to call it.</p>
 				</div>
 				<div class="content_div">
-					<h1 class="align_center">Here's a list of things that really bother me in WT</h1>
+					<h1 class="align_center" id="problems">Here's a list of things that really bother me in WT</h1>
 					<div class="divide"></div>
 					<p><strong>The turning mechanism of Shermans.</strong> In War Thunder, there are two types of turning mechanisms that I've seen represented, clutch-brake, and cross-drive. Clutch-brake steering is the most common, and is present in most tracked vehicles, and as such, tanks. It works by stopping and disconnecting one track from the powertrain, by using the clutch and the brake at once. Because only one track is moving and powered, the entire vehicle pivots around the unpowered track. Cross-drive can steer the same way, by disconnecting and stopping the individual track, but it can also power each track individually. It uses some sort of magical planetary gears or something like that in order to allow one track to turn forward and one to go backwards, so the vehicle can turn in place much more effectively. You see people generally assuming that tanks have one of these mechanisms by default. Outside of tank-knowledgeable people, everyone seems to just assume that everything has cross-drive systems, among people who know some of what they're talking about, everyone just assumes everything uses clutch-brake steering always.</p>
 					<p>And this is why the poor poor shermans are a victim of the clutch-brakification of everything. The Sherman is represented as using clutch-brake steering in WT, which is something that it didn't and is mechanically incapable of doing. The Sherman uses a compensating differential, which does not allow one track to be stopped or disconnected from the powertrain. The driver steers with two levers, when you pull one, say the right lever, it applies the brake to the right side of the differential, which slows it down. The differential then speeds up the left side equivilantly. No matter how hard you pull the right lever, the right track cannot completely come to a stop. If you pull both levers at once, then both tracks will stop in unison. Thus the steering radius of the Sherman is very similar to that of a car, this is by design, which makes it much easier for ordinary people to drive, but has a wider turn radius.</p>
