--- a/about.html
+++ b/about.html
@@ -61,6 +61,9 @@
   				color:#3d9394;
 				text-decoration:none;
 			}
+			em{
+				color:#3d9394;
+			}
 			a:hover{
 				color:#3d8934
 			}
@@ -105,11 +108,18 @@
 						<li><p>Date of Birth: [DATA EXPUNGED]</p></li>
 						<li><p>Security Clearance: Level 4/Machina</p></li>
 						<li><p>Known Aliases: PurpleAce, Ace, Purple</p></li>
-						<li><p>Known Interests: Military Vehicles/History, Tolkien, Computers</p></li>
+						<li><p>Religion: Catholicism</p></li>
+						<li><p>Known Interests: Military Vehicles/History, Tolkien, Computers, Theology</p></li>
 						<li><p>Known to Dislike: People he believes are stupid, Bruessel Sprouts</p></li>
 
 					</ul>
 					<p>I exist on the internet for the purpose of learning about tanks and spreading moderate amounts of tomfoolery.</p>
+				</div>
+				<div class="content_div">
+					<h1 class="align_center" id="dormio">
+						<div class="divide"></div>
+						<p>You may be curious what <em>Ego dormio et cor meum vigilat</em> means. It is the Vulgate version of the beginning of Song of Songs 5:2. The Douay Rheimes version translates it as <em>I sleep, and my heart watcheth</em>. It sounds cool I guess. I don't know if that translation is exactly perfect anyways. <em>Vigilat</em> means something more like "wakeful watching", it has a lot to do with the english word vigilance. To be vigilant is to be watchful, and also to be wakeful. To stay up late on watch while everyone else sleeps. I do not know why they didn't just translate is as <em>I sleep, and my heart is vigilant</em> vigilance may have had a different connotation at the time of writing. </p>
+						<p>I originally saw it in a Stations of the Cross booklet, with a picture of the Sacred Heart of Jesus. I do not know what the relationship between that phrase and the Sacred Heart is. Anyways I thought it sounded cool so I put it on my website without knowing what it means. I still don't really know what it means.</p>
 				</div>
 			</div>
  		</div>
