--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 			</div>
 			<div class="part">
 				<div class="content_div">
-					<p class="align_center">MEMENTO MORI<br>EGO DORMIO ET COR MEUM VIGILAT</p>
+					<h2 class="align_center">MEMENTO MORI</h2>
+					<h2 class="align_center">EGO DORMIO ET COR MEUM VIGILAT</h2>
 					<div class="divide"></div>
 					<img src="/images/knight.gif" style="width:50%;top:5px" class="center">
 					<div class="align_center" style="margin:5px">
