--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="#088">Personel File 088</a></p>
+					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="#088">Personel File 088</a><br><a href="dormio">Vigilat</a></p>
 				</div>
 			</div>
 			<div class="right">
@@ -116,9 +116,9 @@
 					<p>I exist on the internet for the purpose of learning about tanks and spreading moderate amounts of tomfoolery.</p>
 				</div>
 				<div class="content_div">
-					<h1 class="align_center" id="dormio">
+					<h1 class="align_center" id="dormio">Concerning the Header</h1>
 						<div class="divide"></div>
-						<p>You may be curious what <em>Ego dormio et cor meum vigilat</em> means. It is the Vulgate version of the beginning of Song of Songs 5:2. The Douay Rheimes version translates it as <em>I sleep, and my heart watcheth</em>. It sounds cool I guess. I don't know if that translation is exactly perfect anyways. <em>Vigilat</em> means something more like "wakeful watching", it has a lot to do with the english word vigilance. To be vigilant is to be watchful, and also to be wakeful. To stay up late on watch while everyone else sleeps. I do not know why they didn't just translate is as <em>I sleep, and my heart is vigilant</em> vigilance may have had a different connotation at the time of writing. </p>
+						<p>You may be curious what <em>Ego dormio et cor meum vigilat</em> means. It is the Vulgate version of the beginning of Song of Songs 5:2. The Douay Rheimes version translates it as <em>I sleep, and my heart watcheth</em>. It sounds cool I guess. I don't know if that translation is exactly perfect anyways. <em>Vigilat</em> means something more like "wakeful watching", it has a lot to do with the english word vigilance. To be vigilant is to be watchful, and also to be wakeful. To stay up late on watch while everyone else sleeps. I do not know why they didn't just translate is as <em>I sleep, and my heart is vigilant</em>. Vigilance may have had a different connotation at the time of writing. </p>
 						<p>I originally saw it in a Stations of the Cross booklet, with a picture of the Sacred Heart of Jesus. I do not know what the relationship between that phrase and the Sacred Heart is. Anyways I thought it sounded cool so I put it on my website without knowing what it means. I still don't really know what it means.</p>
 				</div>
 			</div>
