--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 		<div id="container">
 			<div class="left">
 				<div class="content_div">
-					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="#088">Personel File 088</a><br><a href="dormio">Vigilat</a></p>
+					<p><a href="/about.html">.</a><br><a href="/index.html">..</a><br><a href="#088">Personel File 088</a><br><a href="#dormio">Vigilat</a></p>
 				</div>
 			</div>
 			<div class="right">
